--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-pyrogram>=2.0.106
-tgcrypto>=1.2.5
-motor>=3.3.2
-Pillow>=9.5.0
-flask>=2.3.3
+pyrogram==2.0.106
+tgcrypto==1.2.5
+motor==3.3.2
+pillow==9.5.0
